<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view_output"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="#FF0909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_r"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:max="255"
        android:progress="150"
        android:progressTint="#FF0000"
        android:thumbTint="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_output" />

    <TextView
        android:id="@+id/textView_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_r"
        app:layout_constraintEnd_toStartOf="@+id/seekBar_r"
        app:layout_constraintTop_toTopOf="@+id/seekBar_r" />

    <TextView
        android:id="@+id/textView_r_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/seekBar_r"
        app:layout_constraintTop_toTopOf="@+id/seekBar_r" />

    <SeekBar
        android:id="@+id/seekBar_g"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:max="255"
        android:progress="150"
        android:progressTint="#00FF00"
        android:thumbTint="#00FF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_r" />

    <TextView
        android:id="@+id/textView_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_g"
        app:layout_constraintEnd_toStartOf="@+id/seekBar_g"
        app:layout_constraintTop_toTopOf="@+id/seekBar_g" />

    <TextView
        android:id="@+id/textView_g_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/seekBar_g"
        app:layout_constraintTop_toTopOf="@+id/seekBar_g" />

    <SeekBar
        android:id="@+id/seekBar_b"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:max="255"
        android:progress="150"
        android:progressTint="#0000FF"
        android:thumbTint="#0000FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_g" />

    <TextView
        android:id="@+id/textView_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_b"
        app:layout_constraintEnd_toStartOf="@+id/seekBar_b"
        app:layout_constraintTop_toTopOf="@+id/seekBar_b" />

    <TextView
        android:id="@+id/textView_b_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00"
        app:layout_constraintStart_toEndOf="@+id/seekBar_b"
        app:layout_constraintTop_toTopOf="@+id/seekBar_b" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:text="@string/hex_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_b" />

    <EditText
        android:id="@+id/editText_hex"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>